Fix return value for "fallback" case of inverted clips.

Also changed LocalToAncestorVisualRect to return a const reference, which
was an oversight in previous CLs.

BUG=704077
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2

Review-Url: https://codereview.chromium.org/2816533002
Cr-Commit-Position: refs/heads/master@{#463910}

Former-commit-id: 64eb4f544d1b3b778f5b915de00e1e6cdced0aa3